--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,27 @@
 h4{
     text-decoration: underline;
 }
+
+.enlaces{
+    text-decoration: none;
+    color: black;
+}
+
+.h3{
+    text-decoration: underline;
+    text-align: center;
+    margin-top: 0.5rem;
+}
+
+.imagenPackaging{
+    height: 15rem;
+    margin: 0.5rem;
+}
+
+.divImagenes {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0.5rem;
+}
