--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,15 @@ h4{
     justify-content: center;
     margin: 0.5rem;
 }
+
+.video{
+    height: 20rem;
+    width: 20rem;
+}
+
+.divVideo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0.8rem;
+}
