--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,10 @@ h4{
     align-items: center;
     margin: 0.8rem;
 }
+
+.quienesSomos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 00.8rem;
+}
