Agregue la seccion de contacto

--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,37 @@ h4{
     align-items: center;
     margin: 00.8rem;
 }
+
+.fs-3{
+    text-align: center;
+}
+
+li{
+    list-style:none;
+}
+
+.row {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-.5 * var(--bs-gutter-x));
+    margin-left: calc(-.5 * var(--bs-gutter-x));
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    margin: 1rem;
+}
+
+.containerC {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin: 3rem;
+}
+
+.fs-3{
+    text-decoration: underline;
+}
+
